🐛 Fix collapsable

--- a/themes/exeal/assets/scss/main.scss
+++ b/themes/exeal/assets/scss/main.scss
@@ -469,7 +469,7 @@ sup {
 
 .collapsable {
   cursor: pointer;
-  width: calc(100% - 3em);
+  width: 100%;
   height: 50px;
   text-align: center;
   color: $secondary-color;
@@ -488,18 +488,15 @@ sup {
 }
 
 @media (max-width: 768px) {
+  .collapsable {
+    width: 80%;
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+
   .collapsable .image {
     margin-left: calc(100% + 0.2em);
   }
-}
-
-.collapsable.expanded {
-  position: relative;
-  top: -4px;
-}
-
-.collapsable > h2 {
-  margin: 0em;
 }
 
 dl.faq dt {
